noinst_LTLIBRARIES = libcharm@P@_shc.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_shc_la_SOURCES = shc_da.c \
							 shc_dda.c \
							 shc_ddv.c \
							 shc_dv.c \
							 shc_alloc.c \
							 shc_malloc.c \
							 shc_calloc.c \
							 shc_init.c \
							 shc_init_chunk.c \
							 shc_block_init.c \
							 shc_block_free.c \
							 shc_block_have_order.c \
							 shc_block_get_coeffs.c \
							 shc_block_set_coeffs.c \
							 shc_block_nan.c \
							 shc_block_get_idx.c \
							 shc_block_get_mlast_ncs_root.c \
							 shc_block_reset_coeffs.c \
							 shc_block_set_mfirst.c \
							 shc_check_chunk_orders.c \
							 shc_local_ncs.c \
							 shc_free.c \
							 shc_read_bin.c \
							 shc_read_mtx.c \
							 shc_read_tbl.c \
							 shc_read_dov.c \
							 shc_read_gfc.c \
							 shc_read_mtdt.c \
							 shc_read_nmax_only.c \
							 shc_write_bin.c \
							 shc_write_mtx.c \
							 shc_write_tbl.c \
							 shc_write_dov.c \
							 shc_write_mtdt.c \
							 shc_rescale.c \
							 shc_reset_coeffs.c \
							 shc_get_nmax_model.c \
							 shc_check_distribution.c


EXTRA_DIST = *.h
