noinst_LTLIBRARIES = libcharm@P@_shs@OMP@.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_shs@OMP@_la_SOURCES = shs_cell.c \
								  shs_cell_grd.c \
								  shs_cell_isurf_coeffs.c \
								  shs_cell_isurf.c \
								  shs_cell_isurf_lr.c \
								  shs_cell_isurf_offset.c \
								  shs_cell_kernel.c \
								  shs_cell_sctr.c \
								  shs_point.c \
								  shs_point_grd.c \
								  shs_point_kernel.c \
								  shs_point_sctr.c \
								  shs_rpows.c \
								  shs_check_symmi.c


EXTRA_DIST = *.h
