noinst_LTLIBRARIES = libcharm@P@_shs.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_shs_la_SOURCES = shs_cell.c \
							 shs_cell_grd.c \
							 shs_cell_isurf_coeffs.c \
							 shs_cell_isurf.c \
							 shs_cell_isurf_lr.c \
							 shs_cell_kernel.c \
							 shs_cell_sctr.c \
							 shs_cell_check_grd_lons.c \
							 shs_point.c \
							 shs_point_grads.c \
							 shs_point_grd.c \
							 shs_point_kernels.c \
							 shs_point_sctr.c \
							 shs_grd_lr.c \
							 shs_grd_lr2.c \
							 shs_grd_point_fft_check.c \
							 shs_grd_cell_fft_check.c \
							 shs_grd_fft_lc.c \
							 shs_grd_fft.c \
							 shs_sctr_mulc.c \
							 shs_lc_init.c \
							 shs_lc_free.c \
							 shs_check_symm_simd.c \
							 shs_r_eq_rref.c \
							 shs_rpows.c \
							 shs_point_guru.c \
							 shs_check_single_derivative.c \
							 shs_check_grads.c \
							 shs_get_mur_dorder_npar.c \
							 shs_get_imax.c


EXTRA_DIST = *.h \
			 shs_point_gradn.c \
			 shs_point_kernel.c
